--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@hotwired/turbo-rails": "^7.1.1",
     "autoprefixer": "^10.4.2",
     "esbuild": "^0.14.18",
+    "esbuild-darwin-arm64": "^0.14.18",
+    "esbuild-rails": "^1.0.3",
     "postcss": "^8.4.6",
     "tailwindcss": "^3.0.18"
   },
   "scripts": {
-    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css"
+    "build:css": "tailwindcss -i ./app/assets/stylesheets/application.tailwind.css -o ./app/assets/builds/application.css",
+    "build": "node esbuild.config.js"
   }
 }
