--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.0.1",
     "@hotwired/turbo-rails": "^7.1.1",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "@tailwindcss/typography": "^0.5.1",
     "autoprefixer": "^10.4.2",
     "esbuild": "^0.14.18",
     "esbuild-darwin-arm64": "^0.14.18",
